objects/State_Contact__c.object
<CustomObject>
    <description>junction object between Municipality and Contact objects.</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>State Contacts</relationshipLabel>
        <relationshipName>State_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Position__c</fullName>
        <label>Job Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legislator</fullName>
                </value>
                <value>
                    <fullName>Lobbyist</fullName>
                </value>
                <value>
                    <fullName>Regulator</fullName>
                </value>
                <value>
                    <fullName>Government Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Municipality__c.State_Record__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>State Contacts</relationshipLabel>
        <relationshipName>State_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <label>State Contact</label>
    <nameField>
        <displayFormat>SC-{0}</displayFormat>
        <label>State Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>